--- a/CoffeeTamins.html
+++ b/CoffeeTamins.html
@@ -1,4 +1,4 @@
-a<html lang="en">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -328,12 +328,12 @@ a<html lang="en">
     </div>
 
     <div class="links">
-        <a href="#">home</a>
-        <a href="#">about</a>
-        <a href="#">menu</a>
-        <a href="#">products</a>
-        <a href="#">contact</a>
-        <a href="#">News</a>
+        <a href="#home">home</a>
+        <a href="#about">about</a>
+        <a href="#menu">menu</a>
+        <a href="#products">products</a>
+        <a href="#contact">contact</a>
+        <a href="#news">News</a>
     </div>
 
   
